Fixed modal position on IE

--- a/src/assets/scss/sub-stylesheet/_footer.scss
+++ b/src/assets/scss/sub-stylesheet/_footer.scss
@@ -13,6 +13,7 @@
             .footer-logo {
                 img {
                     image-rendering: -webkit-optimize-contrast;
+                    width: 100%;
                 }
                 a {
                     margin-bottom: 25px;
